fix: oauth isn't a second factor, fixes backup codes not always being removed and fixes #1317